maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: ';' expected but integer literal found.
	random 3() match {
               ^